@@ -477,6 +477,7 @@ struct proc_keyword_s proc_table[] = {
 #define LCN_LOAD_MODULES        "LOAD MODULES"
 #define LCN_AUTOLOCAL           "AUTOLOCAL"
 #define LCN_AS_WRS              "AS "
+#define LCN_CONST               "CONST"
 
 /* system variables */
 #define LCN_SV_SBVER            "SBVER"
